@@ -1,6 +1,7 @@
 # ChangeLog
 
 0.6.0.dev0
+    * Added endpoint for control of extruder
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
